add redux && authorization

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,6 +2,10 @@
   width: 400px;
   background-color: var(--color-background);
   height: 600px;
+}
+
+.popupContent {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
