--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,11 @@
   --color-active: #ffffff;
   --color-unactive: #828282;
   --color-text: #ffffff;
+  --color-card-background: #181818;
+  //--color-card-border: #333333;
+  --color-card-border: #222222;
+  --color-caption: #ffffff;
+  --color-additionalInfo: #828282;
 }
 
 .line {
