--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -5,9 +5,10 @@
   overflow-y: scroll;
   overflow-x: hidden;
   padding-right: 20px;
+  overflow-x: hidden;
 
   &::-webkit-scrollbar {
-    width: 5px;
+    width: 3px;
     background-color: var(--color-background);
   }
 
