--- a/src/components/Footer/NavItem/NavItem.module.scss
+++ b/src/components/Footer/NavItem/NavItem.module.scss
@@ -15,6 +15,10 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 1px;
+
+    svg {
+      width: 18px;
+    }
   }
 
   .name {
