--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,8 @@
   --color-card-background: #181818;
   //--color-card-border: #333333;
   --color-card-border: #222222;
-  --color-caption: #ffffff;
-  --color-additionalInfo: #828282;
+  --color-mainInfo: #ffffff;
+  --color-subInfo: #828282;
 }
 
 .line {
