--- a/src/components/ListCard/ListCard.module.scss
+++ b/src/components/ListCard/ListCard.module.scss
@@ -85,6 +85,7 @@
 
     .more {
       width: 15px;
+      height: 15px;
       display: flex;
       justify-content: center;
       margin-top: 5px;
