--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
   --color-unactive: #828282;
   --color-text: #ffffff;
   --color-card-background: #181818;
+  --color-card-hover-background: #212121;
   //--color-card-border: #333333;
   --color-card-border: #222222;
   --color-mainInfo: #ffffff;
